# dyupSkills

./: .gitignore  PRD V2.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  rompt模板.md  start.bat  start.sh  技术清单.md  技能格式.md
auc_python/: auc_flash_demo.py  auc_http_demo.py  readme.md
docs/: API.md  DEPLOY.md
src/: __init__.py  ai_generator.py  audio.py  douyincrawler_api.py  douyincrawler_local.py  downloader.py  engine.py  exporter.py  filter.py  models.py  prompts.py  safety.py  storage.py  transcriber.py  volc_ark.py  volc_auc.py
src/douyincrawler/: __init__.py
src/douyincrawler/lib/: cookies.py
src/douyincrawler/lib/douyin/: __init__.py  client.py  crawler.py  parser.py  request.py  target.py  types.py
src/douyincrawler/lib/douyin/js/: douyin.js
src/douyincrawler/utils/: text.py
tests/: test_filter.py  test_models.py  test_prompts.py  test_safety.py  test_storage.py
