[tool.poetry]
name = "douyin-digital-immortality"
version = "1.0.0"
description = "抖音博主内容 → OpenClaw Skill 自动生成工具"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.28.0"
loguru = "^0.7.0"
pydantic = "^2.0.0"
librosa = "^0.10.0"
numpy = "^1.24.0"
aiohttp = "^3.9.0"
pandas = "^2.1.0"
requests = "^2.31.0"
ujson = "^5.9.0"
exejs = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.6.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core.build-backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
cov_report = ["term-missing", "html"]
cov_source = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
